Fixed list styles for footnotes. I need to give more thought to list styles overall. I don't like the way they wrap lines in the main body of the content ('inside')... but i don't like where the bullets end up with 'outside'

--- a/projects/blog/css/style.sass
+++ b/projects/blog/css/style.sass
@@ -168,3 +168,6 @@ sup
   background-color: $callout-bg
   margin-right: -20px
   font-size: 80%
+
+.footnotes ol li
+  list-style-position: outside
